--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -5,7 +5,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Registration Form</title>
+  <title>Registrationss Form</title>
 </head>
 <body>
   <div class="wrapper">
