--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -13,7 +13,7 @@
            <h3>Registration Form</h3>
         <form>
         <label>Name:</label>
-        <input type="text" name="name" required><br> <br>
+        <input type="text" name="namess" required><br> <br>
         
         <label>Password:</label>
 <input type="password" name="password" required><br> <br>
