--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -19,7 +19,7 @@
 <input type="password" name="password" required><br> <br>
         
         <label>Email ID:</label>
- <input type="email" name="email" required><br> <br>
+ <input type="emaiiil" name="email" required><br> <br>
         
         <label>Phone Number:</label>
 <input type="text" name="phno" required><br> <br>
