--- a/RegistrationForm.html
+++ b/RegistrationForm.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
     <main>
-           <h3>Registration Form</h3>
+           <h3>Registrationnn Form</h3>
         <form>
         <label>Name:</label>
         <input type="text" name="namess" required><br> <br>
